# black-queen

./: .env.example  .gitignore  AGENTS.md  AI.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tuned_weights.json  vercel.json
.claude/: launch.json
docs/: BACKLOG.md  HANDOFF.md  ai_matrix_2026-05-27.md  ai_roster.md  auth_setup.md  bid_calibration_plan.md  game_analysis_hard4.md  hard4b_experiment.md  hard5_literature_plan.md  hard5_roadmap.md  mixed_ai_observation.md  multiplayer_todo.md  tree_ismcts_plan.md
docs/bid_calibration/: HOLD_DECISION.md  analysis.md  findings.md  weight_ab_analysis.md  weight_ab_findings.md
docs/elo/: README.md  elo.json
docs/game_traces/: 2026-05-27__3a6a608__improvement-plan.md  README.md  mixed_hard_103839.txt  mixed_hard_111758.txt  mixed_hard_53001.txt  mixed_hard_60920.txt  mixed_hard_68839.txt  mixed_hard_76758.txt  mixed_hard_88001.txt  mixed_hard_95920.txt
docs/game_traces_after_guard/: README.md  mixed_hard_111758.txt
docs/regret/: FINDINGS.md
public/: privacy.html
rust/: Cargo.toml  tuned_intent.json
rust/crates/bq-ai/: Cargo.toml
rust/crates/bq-ai/src/: belief.rs  endgame.rs  handeval.rs  hard4.rs  intent.rs  ismcts.rs  lib.rs  rollout.rs  tree_ismcts.rs
rust/crates/bq-cli/: Cargo.toml
rust/crates/bq-cli/src/: main.rs
rust/crates/bq-engine/: Cargo.toml
rust/crates/bq-engine/src/: deck.rs  engine.rs  lib.rs  rng.rs  rules.rs  types.rs
rust/crates/bq-wasm/: Cargo.toml
rust/crates/bq-wasm/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/auth/: AuthContext.tsx
src/components/: AIInfoModal.tsx  AIInfoPage.tsx  BiddingPanel.tsx  CardSkinContext.tsx  CardView.tsx  CollectionDeck.tsx  Confetti.tsx  DeclarePanel.tsx  ErrorBoundary.tsx  HandLayoutContext.tsx  HandStrip.tsx  HelpModal.tsx  HistoryModal.tsx  Leaderboard.tsx  Lobby.tsx  MainMenu.tsx  MobileGame.tsx  (+15 more)
supabase/: README.md
(+143 files in other folders)
