[workspace]
resolver = "2"
members = ["crates/bq-engine", "crates/bq-ai", "crates/bq-wasm", "crates/bq-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
