[package]
name = "bq-cli"
version.workspace = true
edition.workspace = true

[dependencies]
bq-engine = { path = "../bq-engine" }
bq-ai = { path = "../bq-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
rayon = { workspace = true }

[[bin]]
name = "bq-cli"
path = "src/main.rs"

[[bin]]
name = "tune_intent"
path = "src/bin/tune_intent.rs"

[[bin]]
name = "compare_indicator"
path = "src/bin/compare_indicator.rs"

[[bin]]
name = "compare_bidding"
path = "src/bin/compare_bidding.rs"
